--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,19 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha06'
     implementation 'androidx.core:core-ktx:1.2.0-alpha01'
 
+    //Constraint Layout
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    //RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    //CardView
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+
+
+
+
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
