--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     package="com.himanshurawat.githubdeveloperapi">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application android:allowBackup="true"
+        android:name=".App"
                  android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
                  android:roundIcon="@mipmap/ic_launcher_round"
@@ -17,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.ProfileActivity"/>
-        <activity android:name=".ui.MainActivity"
+        <activity android:name=".ui.main.MainActivity"
+            android:label="@string/users"
             android:theme="@style/AppTheme.MainActivity" />
     </application>
 </manifest>
