--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.ProfileActivity"/>
+        <activity android:name=".ui.profile.ProfileActivity"
+            android:theme="@style/AppTheme.ProfileActivity"/>
         <activity android:name=".ui.main.MainActivity"
             android:label="@string/users"
             android:theme="@style/AppTheme.MainActivity" />
