--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,20 @@
                  android:supportsRtl="true"
                  android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.SplashActivity">
+        <activity android:name=".ui.SplashActivity"
+            android:theme="@style/AppTheme.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".ui.profile.ProfileActivity"
-            android:theme="@style/AppTheme.ProfileActivity"/>
+            android:theme="@style/AppTheme.ProfileActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".ui.main.MainActivity"
             android:label="@string/users"
-            android:theme="@style/AppTheme.MainActivity" />
+            android:theme="@style/AppTheme.MainActivity"
+            android:screenOrientation="portrait"/>
     </application>
 </manifest>
